--- a/frontend/src/pages/Login/Login.scss
+++ b/frontend/src/pages/Login/Login.scss
@@ -7,7 +7,7 @@
 
     .form-box{
         width: 90%;
-        height: 40%;
+        height: 60%;
         max-height: 300px;
         max-width: 450px;
         padding: 50px 60px 70px;
@@ -83,18 +83,21 @@
         }
 
         .signup--message{
-            position: relative;
             width: 100%;
-
-            p{
-                position: absolute;
-                bottom: -20px;
-                left: 50%; /* position the left of the child element at the horizontal center of the parent container */
-                transform: translate(-50%, -50%);;
-            }
+            position: relative;
+            bottom: 40px;
         }
     }
+
+    .signup--success{
+        color: rgb(6, 113, 6);
+        font-weight: bold;
+        font-size: 12px;
+    }
     
+    .hidden{
+        display: none;
+    }
     
 }
 
