--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -1,12 +1,17 @@
 nav{
     width: 100%;
     height: 10%;
-
+    
     .nav--container{
+        height: 70px;
+        margin: 0 50px;
         display: flex;
         align-items: center;
-        margin: 0 50px;
 
+        .hidden{
+            display: none;
+        }
+        
         a{
             text-decoration: none;
             color: gray;
@@ -17,25 +22,26 @@ nav{
 
         .logo{
             width: 65px;
-            height: 65px;
             margin-right: 20px;
         }
 
         .nav--element{
+        /* Applies to every element in navbar */
             margin: 0 10px;
             list-style: none;
         }
 
+        /* Elements for users that are not logged in */
         .login{
             margin-left: auto;
         }
 
         .signup{
-            background-color: rgb(176, 19, 176);
-            border-radius: 5px;
-            font-weight: bold;
             margin-top: 2px;
             padding: 10px;
+            border-radius: 5px;
+            font-weight: bold;
+            background-color: rgb(176, 19, 176);
          
             &:hover{
                 background-color: rgb(218, 37, 218);
@@ -46,6 +52,50 @@ nav{
             }
         }
 
+        /*Elements that only logged in users can see*/
+        .loggedUser{
+            margin-left: auto;
+            position: relative;
+
+            .loggedUser--details{
+                /*Username text and profile photo*/
+                display: flex;
+                align-items: center;
+
+                .loggedUser--username{
+                    margin-right: 10px;
+                }
+
+                .loggedUser--profile{
+                    width: 56px;
+                    margin: 0 auto;
+                    cursor: pointer;
+                }
+                
+                /*Menu that shows and hides when the profile image is clicked*/
+                .loggedUser--menu{
+                    width: 150px;
+                    position: absolute;
+                    top: 60px;
+                    right: 0px;
+                    text-align: right;
+                    border-radius: 10px;
+                    outline: 1px solid rgb(178, 178, 178);
+                    background-color: white;
+
+                    .menu-item{
+                        margin: 5px 0px;
+                        display: flex;
+                        justify-content: flex-end;
+                        align-items: center;
+    
+                        a{
+                            margin-left: 10px;
+                        }
+                    }
+                }
+            }
+        }
     }
 }
 
