--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -1,7 +1,10 @@
 nav{
     width: 100%;
     height: 10%;
-    
+ 
+    .hidden{
+    }
+
     .nav--container{
         height: 70px;
         margin: 0 50px;
@@ -28,6 +31,7 @@ nav{
             margin-left: auto;
             display: flex;
             align-items: center;
+            position: relative;
             list-style: none;
 
 
@@ -53,9 +57,17 @@ nav{
             }
 
 
-                .logout{
-                    cursor: pointer;
+            .profile{
+                list-style: none;
+
+                a{
+                    margin-right: 20px;
                 }
+            }
+
+            .logout{
+                cursor: pointer;
+            }
         }
 
         a, .logout{
