style: Add styling to category field in the ad publishing form

--- a/frontend/src/pages/AddAd/AddAd.scss
+++ b/frontend/src/pages/AddAd/AddAd.scss
@@ -54,6 +54,15 @@
         }
     }
 
+    .form-category{
+        select{
+            padding: 10px ;
+            border: none;
+            text-align: center;
+            cursor: pointer;
+        }
+    }
+    
     .form-image{
         position: relative;
         overflow: hidden;
