--- a/frontend/src/components/Ad/Ad.scss
+++ b/frontend/src/components/Ad/Ad.scss
@@ -15,7 +15,7 @@
         img{
             width: 90%;
             height: 90%;
-            object-fit: cover;
+            object-fit: fill;
             border-radius: 5px;
         }
     }
