--- a/frontend/src/pages/UserProfile/UserProfile.scss
+++ b/frontend/src/pages/UserProfile/UserProfile.scss
@@ -55,6 +55,7 @@
             display: flex;
             align-items: center;
             .profile-info{
+            
                 width: 20%;
                 height: 80%;
                 margin-left: 10px;
@@ -62,7 +63,7 @@
                 flex-flow: column;
                 justify-content: space-around;
                 border-radius: 20px;
-                background-color: white;
+                background-color: rgb(232, 230, 230);
 
                 text-align: center;
                     .info{
@@ -77,6 +78,7 @@
             }
 
             .profile-ads{
+                background-color: rgb(232, 230, 230);
                 width: 80%;
                 height: 80%;
                 border-radius: 20px;
@@ -87,6 +89,7 @@
                 }
 
                 .ads-container{
+                    padding-left: 10px;
                     display: grid;
                     grid-template-columns: repeat(2, 1fr);
                     text-align: center;
