--- a/frontend/src/pages/Ads/Ads.scss
+++ b/frontend/src/pages/Ads/Ads.scss
@@ -9,38 +9,6 @@
         background-color: rgb(232, 230, 230);
         display: flex;
 
-        .ads-search{
-            width: 30%;
-            height: 100%;
-            display: flex;
-            justify-content: center;
-            
-            form{
-                display: flex;
-                flex-flow: column;
-                align-items: flex-start;
-
-                .search-title{
-                    border: none;
-                    padding: 20px;
-                    border-radius: 10px;
-                }    
-
-                button{
-                    margin: 10px auto;
-                    border: none;
-                    color: white;
-                    background-color: rgb(218, 37, 218);
-                    padding: 10px 20px;
-                    border-radius: 10px;
-
-                    &:hover{
-                        background-color: rgb(176, 19, 176);
-                    }
-                }
-            }
-        }
-
         .all-ads{
             width: 70%;
             float: right;
@@ -48,10 +16,6 @@
             display: flex;
             flex-flow: column;
             align-items: flex-end;
-        }
-
-        h1{
-            text-align: center;
         }
 
         .add-an-ad-btn{
@@ -72,5 +36,67 @@
                 background-color: rgb(176, 19, 176);
             }
         }
+
+        .pages-controller{
+            display: flex;
+            flex-flow: column;
+            margin-right: 10px;
+            padding-top: 20px;
+            
+            button{
+                width: 40px;
+                height: 40px;
+                margin: 5px 0px;
+                border: none;
+                border-radius: 5px;
+                transition: .1s;
+                cursor: pointer;
+                color: rgb(95, 66, 210);
+                background-color: white;
+
+                &:hover{
+                    background-color: rgb(95, 66, 210);
+                    color: white;
+                }   
+            }
+
+            button.active{
+                background-color: rgb(95, 66, 210);
+                color: white;
+
+            }
+        }
     }    
+
+    .ads-search{
+        width: 30%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+            
+        form{
+            display: flex;
+            flex-flow: column;
+            align-items: flex-start;
+
+            .search-title{
+                border: none;
+                padding: 20px;
+                border-radius: 10px;
+            }    
+
+            button{
+                margin: 10px auto;
+                border: none;
+                color: white;
+                background-color: rgb(218, 37, 218);
+                padding: 10px 20px;
+                border-radius: 10px;
+
+                &:hover{
+                    background-color: rgb(176, 19, 176);
+                }
+            }
+        }
+    }
 }
