--- a/frontend/src/pages/Ads/Ads.scss
+++ b/frontend/src/pages/Ads/Ads.scss
@@ -69,7 +69,7 @@
     }    
 
     .ads-search{
-        width: 30%;
+        width: 70%;
         height: 100%;
         display: flex;
         justify-content: center;
@@ -77,25 +77,35 @@
         form{
             display: flex;
             flex-flow: column;
-            align-items: flex-start;
+            align-items: center;
+            width: 100%;
+            margin-top: 20px;
 
             .search-title{
+                width: 80%;
                 border: none;
                 padding: 20px;
                 border-radius: 10px;
             }    
+        }
 
-            button{
-                margin: 10px auto;
-                border: none;
-                color: white;
-                background-color: rgb(218, 37, 218);
-                padding: 10px 20px;
-                border-radius: 10px;
+        .ads-search-categories{
+            width: 80%;
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
 
-                &:hover{
-                    background-color: rgb(176, 19, 176);
-                }
+            h3{
+                margin-top: 20px;
+                text-align: center;
+            }
+
+            .categories{
+                width: 100%;
+                display: flex;
+                flex-flow: column;
+                align-items: center;
+
             }
         }
     }
