--- a/frontend/src/components/Ad/Ad.scss
+++ b/frontend/src/components/Ad/Ad.scss
@@ -32,6 +32,17 @@
             margin-top: 20px;
         }
     }
+    .ad-details-icons{
+        height: 100%;
+        display: flex;
+        align-items: flex-end;
+        color: gray;
+        
+        i{
+            margin-right: 10px;
+            margin-bottom: 20px;
+        }
+    }
 
     .ad-details{
         width: 30%;
