style: Add styling to the addAd.jsx

--- a/frontend/src/pages/AddAd/AddAd.scss
+++ b/frontend/src/pages/AddAd/AddAd.scss
@@ -94,7 +94,10 @@
                     }
                 }
             }
-            
+            span{
+                font-size: 12px;
+                font-style: italic;
+            }
             //Button for submitting ad
             .add-ad-btn{
                 margin-top: 20px;
