style: Add styling to the subtext next to the shipping option checkbox in AddAd.jsx

--- a/frontend/src/pages/AddAd/AddAd.scss
+++ b/frontend/src/pages/AddAd/AddAd.scss
@@ -94,6 +94,10 @@
                     }
                 }
             }
+            span{
+                font-size: 12px;
+                font-style: italic;
+            }
             
             //Button for submitting ad
             .add-ad-btn{
