--- a/frontend/src/pages/Login/Login.scss
+++ b/frontend/src/pages/Login/Login.scss
@@ -19,6 +19,11 @@
         border-radius: 10px;
         background: #fff;
 
+        .wrongCredentials-message{
+            color: rgb(255, 9, 9);
+            font-weight: bold;
+        }
+
         h1{
             font-size: 30px;
             margin-bottom: 30px;
