feat: Display message on a successful ad upload

--- a/frontend/src/pages/Ads/Ads.scss
+++ b/frontend/src/pages/Ads/Ads.scss
@@ -18,6 +18,14 @@
             align-items: flex-end;
         }
 
+        .message-container{
+            width: 70%;
+            text-align: center;
+        }
+        .ad-success-message{
+            color: green;
+            font-weight: bold;
+        }
         .add-an-ad-btn{
             position:fixed;
             bottom: 30px;
