--- a/frontend/src/components/Footer/Footer.scss
+++ b/frontend/src/components/Footer/Footer.scss
@@ -23,3 +23,15 @@
     }
     
 }
+
+@media (max-width:650px) {
+    
+    .footer-container{
+        height: 10%;
+
+        .footer-link{
+            font-size: 18px !important
+        }
+    };
+
+}
