--- a/frontend/src/components/Ad/Ad.scss
+++ b/frontend/src/components/Ad/Ad.scss
@@ -8,30 +8,35 @@
     border-radius: 10px;
     background-color: white;
 
-    .ad-image{
-        width: 35%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        
-        img{
-            width: 90%;
-            height: 90%;
-            object-fit: fill;
-            border-radius: 5px;
+
+        .ad-image{
+            width: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .no-image{
+                width: 150px;
+            }
+            img{
+                width: 90%;
+                height: 90%;
+                object-fit: fill;
+                border-radius: 5px;
+            }
         }
-    }
 
     .ad-main-text{
         width: 35%;
         display: flex;
         flex-flow: column;
-        overflow: hidden;
+        overflow: hidden !important;
         
         .h3{
             margin-top: 20px;
         }
     }
+
     .ad-details-icons{
         height: 100%;
         display: flex;
@@ -49,11 +54,9 @@
         display: flex;
         flex-flow: column;
         justify-content: space-evenly;
+    
         .ad-details-text{
             font-size: 14px;
-            h3{
-                font-weight: bold;
-            }
         }
 
         .button-container{
@@ -72,4 +75,22 @@
             }    
         }
     }
+}
+
+
+@media (max-width: 600px) {
+
+    .ad{
+        max-width: 310px;
+
+        .button-container{
+            float: none !important;
+            a{
+                padding: 10px 10px !important;
+                font-size: 10px;
+            }    
+        }
+
+    }
+
 }
