--- a/frontend/src/components/Navbar/Navbar.scss
+++ b/frontend/src/components/Navbar/Navbar.scss
@@ -2,8 +2,6 @@ nav{
     width: 100%;
     height: 10%;
     background-color: white;
-    .hidden{
-    }
 
     .nav--container{
         height: 70px;
@@ -80,3 +78,33 @@ nav{
     }
 }
 
+@media (max-width: 768px) {
+    .nav--container {
+      margin: 0 20px !important;
+    }
+
+    .contactus{
+        text-align: center;
+    }
+  
+    .nav--left {
+      a {
+        margin: 0 5px !important;
+      }
+  
+      .logo {
+        width: 40px !important;
+        margin-right: 10px !important;
+      }
+    }
+  
+    .nav--right {
+      .login {
+        margin-right: 10px !important;
+      }
+  
+      .profile a {
+        margin-right: 10px !important;
+      }
+    }
+  }
