--- a/frontend/src/pages/Home/Home.scss
+++ b/frontend/src/pages/Home/Home.scss
@@ -4,10 +4,18 @@
 
     .home--hero-section{
         height: 85%;
+        width: 100% !important;
         text-align: center;
+        background-color: white ;
 
         h1{
             font-size: 35px;
+            font-weight: 500;
+        }
+
+        h3{
+            margin-top: 20px;
+            font-size: 25px;
             font-weight: 500;
         }
 
@@ -17,7 +25,8 @@
             grid-template-rows: repeat(10, 1fr);
             gap: 10px;
             height: 90%;
-    
+            width: 100%;
+
             .grid-section{
                 border-radius: 10px;
                 transition: .5s;
@@ -71,7 +80,6 @@
                 grid-row: 2/9;
                 width: 50%;
                 margin: 0 auto;
-
             }
         }
     }
@@ -81,35 +89,31 @@
 
     .home--hero-section{
         height: 80% !important;
+
+        h1{
+            position: absolute;
+        }
     }
-
-
-    h1{
-        position: absolute;
-    }
-    // .hero--grid {
-    //   display: none !important;
-    // }
-
-    
 }
 
 
 @media (max-width: 1000px) {
-
     .home--hero-section{
         display: flex;
         justify-content: center;
         align-items: center;
-    }
 
-
-    h1{
-        position: absolute;
-    }
-    // .hero--grid {
-    //   display: none !important;
-    // }
-
+        h1{
+            position: absolute;
+        }    
     
+        h3{
+            display: none;
+        }    
+
+        .hero--grid{
+            grid-template-columns: repeat(2, 1fr) !important;
+            grid-template-rows: repeat(2, 1fr) !important;    
+        }
+    }
 }
