--- a/frontend/src/pages/Ad/Ad.scss
+++ b/frontend/src/pages/Ad/Ad.scss
@@ -17,10 +17,10 @@
             width: 100%;
             height: 80%;
             margin-left: 10px;
-            
+    
             .ad-image-container{
-                width: 30%;
                 background-color: white;
+                width: 30%;
                 margin-right: 10px;
                 display: flex;
                 justify-content: center;
@@ -28,7 +28,7 @@
                 border-radius: 10px;
                 
                 img{
-                    width: 300px;
+                    width: 350px !important;
                     border-radius: 10px;
                 }
             }
@@ -103,37 +103,75 @@
 @media (max-width: 900px){
     .ad-container{
         position: relative;
-    }
-    .ad-upper{
+        justify-content: center !important;
+        align-items: center !important;
+        display: flex !important;
         flex-flow: column;
-        align-items: center;
-
-        .ad-image-container{
-            width: 95% !important;
-            padding: 10px 0px;
-
-            
-            img{
-                width: 300px !important;
-            }
-        }
-
-        .ad-data-container{
-            margin-top: 5px;
-        }
-    }
-
-    .ad-lower{ 
-        position: absolute;
-        bottom: -20px;
         
-        .ad-user-container{
+        .ad{
+            display: flex !important;
             justify-content: center !important;
-            img{
-                width: 100px !important;
-                margin: 0px 30px !important;
+            margin: auto !important;
+            width: 100% !important;
+            align-items: center !important;
+
+            .ad-upper{
+                flex-flow: column;
+                align-items: center;
+                width: 100% !important;
+                text-align: center;
+        
+                .ad-image-container{
+                    width: 95% !important;
+                    padding: 10px 0px;
+                    
+                    img{
+                        width: 100px !important;
+                    }
+                }
+        
+                .ad-data-container{
+                    margin-top: 5px;
+                }
             }
-    
-        }
+            .ad-lower{ 
+                position: absolute;
+                bottom: -20px;
+                display: flex;
+                flex-flow: column !important;
+                width: 100% !important;
+                margin: 0px !important;
+        
+                .ad-user-container{
+                    display: flex !important;
+                    justify-content: center !important;
+                    margin: 0px !important;
+        
+                    img{
+                        width: 100px !important;
+                        margin: 0px 30px !important;
+                    }        
+                }
+            }
+        }        
+    }
+}
+
+
+@media (max-width: 1000px) and (max-height: 850px) {
+    .ad-container{
+        .ad{
+            height: 100%;
+            position: relative;
+
+            .ad-upper{
+                position: absolute;
+                top: 10px;
+            }
+            .ad-lower{
+                position: absolute;
+                bottom: 0;
+            }        
+        }        
     }
 }
