--- a/frontend/src/components/Ad/Ad.scss
+++ b/frontend/src/components/Ad/Ad.scss
@@ -78,16 +78,33 @@
 }
 
 
+
 @media (max-width: 600px) {
 
     .ad{
-        max-width: 310px;
+        margin: 10px auto;
+        width: 95%;
+
+        h3{
+            font-size: 12px !important;
+            margin-top: 10px;
+        }
+
+        p{
+            font-size: 10px;
+        }
+        .ad-image{
+            width: 50%;
+        }
+        img{
+            width: 90% !important;
+        }
 
         .button-container{
             float: none !important;
             a{
                 padding: 10px 10px !important;
-                font-size: 10px;
+                font-size: 8px;
             }    
         }
 
