--- a/frontend/src/pages/UserProfile/UserProfile.scss
+++ b/frontend/src/pages/UserProfile/UserProfile.scss
@@ -41,7 +41,8 @@
             }
 
             img{
-            height: 140px;
+            height: 140px ;
+            width: 140px !important;
             margin-top: 10px;
             border-radius: 50%;
             outline: 3px solid white;
